Adjusted the for loop in consent and login. Fixed styling in login options to be left aligned text.

--- a/Source/Web/Features/Accounts/Login.scss
+++ b/Source/Web/Features/Accounts/Login.scss
@@ -18,6 +18,7 @@
         .provider-name {
             font-weight: 400;
             font-size: 1.5rem;
+            text-align: left;
         }
     }
 }
